# treinaweb-ci-cd-github-actions

test-project/: CHANGELOG.md  math2.py  pyproject.toml
tw-todos/: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json  package.json  tsconfig.json  vite.config.ts
tw-todos/.github/workflows/: bump-version.yaml  cd.yaml  ci.yaml  deploy.yaml  test-and-build.yaml
tw-todos/prisma/: schema.prisma
tw-todos/prisma/migrations/20240116000319_init/: migration.sql
tw-todos/rest_client/: ping.http  todos.http
tw-todos/src/: app.ts  server.ts
tw-todos/src/api/: routes.ts
tw-todos/src/api/controllers/: ping-controller.spec.ts  ping-controller.ts  todo-controller.spec.ts  todo-controller.ts
tw-todos/src/config/db/: prisma.ts
tw-todos/src/config/env/: index.ts
tw-todos/src/config/factories/: repository-factory.ts  use-case-factory.ts
tw-todos/src/core/domain/: todo.ts
tw-todos/src/core/errors/: todo-not-found-error.ts
tw-todos/src/core/repositories/: todo-repository.ts
tw-todos/src/core/repositories/in-memory/: in-memory-todo-repository.spec.ts  in-memory-todo-repository.ts
tw-todos/src/core/use-cases/: create-todo-use-case.spec.ts  create-todo-use-case.ts  delete-todo-by-id-use-case.spec.ts  delete-todo-by-id-use-case.ts  get-all-todos-use-case.spec.ts  get-all-todos-use-case.ts  get-todo-by-id-use-case.spec.ts  get-todo-by-id-use-case.ts  set-todo-has-done-use-case.spec.ts  set-todo-has-done-use-case.ts
(+1 files in other folders)
