[tool.poetry]
name = "test-project"
version = "0.3.0"
description = ""
authors = ["Cleyson <cleysonph@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
